--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,6 +1,6 @@
 html,
 body {
-  padding: 0;
+  padding: 20px;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
@@ -11,16 +11,27 @@ a {
   text-decoration: none;
 }
 
-* {
-  box-sizing: border-box;
+.team-container h3 {
+  margin-bottom: 10px;
 }
 
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
-  body {
-    color: white;
-    background: black;
-  }
+.keeper-container .player {
+  display: flex;
+}
+
+.keeper-container .player .name {
+  width: 225px;
+}
+
+.keeper-container .player .round {
+  width: 100px;
+}
+
+.keeper-container .player .adp {
+  width: 150px;
+}
+
+
+* {
+  box-sizing: border-box;
 }
