--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,6 +4,7 @@ body {
   margin: 0;
   font-family: 'Roboto', sans-serif;
   background: #071E3F;
+  color: white;
 }
 
 a {
@@ -13,6 +14,23 @@ a {
 
 .app-container {
   padding: 1.5rem;
+}
+
+.app-container > h1 {
+  margin: 0;
+  border-bottom: solid 2px rgba(250,250,250, 0.15);
+  font-size: 1.5rem;
+  text-transform: uppercase;
+  letter-spacing: 1px;
+  padding: 0 0 1rem;
+}
+
+.app-container > h1 span {
+  color: #DAA520;
+}
+
+.app-container > p {
+  margin: 1.5rem 0;
 }
 
 .team-container {
@@ -26,24 +44,85 @@ a {
   gap: 0 1rem;
 }
 
+.team-container {
+  color: black;
+}
+
 .team-container h3 {
   margin-bottom: 10px;
+  font-size: 1.2rem;
 }
 
-.keeper-container .player {
+.keeper-container .player:last-of-type {
+  margin-top: 1rem;
+}
+
+.keeper-container .player .best {
   display: flex;
+  align-items: center;
+  gap: 0 0.75rem;
+  margin: 0 0 0.5rem;
 }
 
-.keeper-container .player .name {
-  width: 225px;
+.keeper-container .player .confidence {
+  margin-left: auto;
+  display: flex;
+  align-items: center;
+  gap: 0 0.5rem;
 }
 
-.keeper-container .player .round {
-  width: 100px;
+.keeper-container .player .confidence .score {
+  padding: 0.25rem;
+  color: white;
+  border-radius: 3px;
+  font-weight: 600;
+  font-size: 0.85rem;
 }
 
-.keeper-container .player .adp {
-  width: 150px;
+.keeper-container .player .confidence .score.green {
+  background: green;
+}
+
+.keeper-container .player .confidence .score.green-orange {
+  background: #A09802;
+}
+
+.keeper-container .player .confidence .score.orange {
+  background: #E46700;
+}
+
+.keeper-container .player .confidence .score.red {
+  background: red;
+}
+
+.keeper-container .player .best .icon {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background: green;
+  border-radius: 50%;
+  color: white;
+  padding: 0.15rem;
+}
+
+.keeper-container .player-info {
+  background: #f3f3f3;
+  padding: 0.75rem;
+  border-radius: 5px;
+}
+
+.keeper-container .player-info > div {
+  margin-left: 0.5rem;
+  color: #424242;
+}
+
+.keeper-container .player-info > div:first-of-type {
+  margin: 0 0 0.5rem;
+  color: black;
+}
+
+.keeper-container .player-info h3 {
+  margin: 0;
 }
 
 
