--- a/styles/globals.css
+++ b/styles/globals.css
@@ -61,6 +61,19 @@ a {
   color: black;
 }
 
+.team-container .expand-button {
+  width: 110px;
+  background: none;
+  color: #8FCAF9;
+  border: solid 1px #8FCAF9;
+  border-radius: 4px;
+  display: flex;
+  align-items: center;
+  padding: 0.25rem;
+  margin-left: auto;
+  cursor: pointer;
+}
+
 .team-container h3 {
   margin-bottom: 10px;
   font-size: 1.2rem;
