--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -86,6 +86,10 @@ body {
 
   .player {
 
+    h4 {
+      margin: 1rem 0;
+    }
+
     &:last-of-type {
       margin-top: 1rem;
     }
@@ -157,35 +161,37 @@ body {
         margin: 0;
         font-size: 1.15rem;
       }
+    }
+  }
 
-      .stat-table {
-        margin: 1rem 0 0.5rem;
-        font-size: 0.8rem;
+  .stat-table {
+    margin: 1rem 0 0.5rem;
+    font-size: 0.8rem;
 
-        table {
-          width: 100%;
+    table {
+      width: 100%;
+      border: solid 1px rgba(0,0,0, 0.05);
 
-          thead {
-            background: rgba(0,0,0, 0.6);
-            color: white;
-          }
-
-          th,
-          td {
-            padding: 0.25rem 0.5rem;
-            text-align: left;
-          }
-
-          tbody {
-
-            tr {
-              &:last-of-type {
-                background: rgba(0,0,0, 0.1)
-              }
-            }
-          } 
-        }
+      thead {
+        background: rgba(0,0,0, 0.6);
+        color: white;
+        border: solid 1px rgba(0,0,0, 0.6);
       }
+
+      th,
+      td {
+        padding: 0.25rem 0.5rem;
+        text-align: left;
+      }
+
+      tbody {
+
+        tr {
+          &:nth-of-type(even) {
+            background: rgba(0,0,0, 0.05)
+          }
+        }
+      } 
     }
   }
 }
