--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -21,7 +21,7 @@ body {
     > h1 {
       margin: 0;
       border-bottom: solid 2px rgba(250,250,250, 0.15);
-      font-size: 1.5rem;
+      font-size: 1.25rem;
       text-transform: uppercase;
       letter-spacing: 1px;
       padding: 0 0 1rem;
@@ -98,6 +98,7 @@ body {
         display: flex;
         flex-direction: column;
         gap: 0.5rem;
+        padding-left: 0.5rem;
 
         ul {
           margin: 0.5rem 0;
@@ -108,6 +109,7 @@ body {
         background: white;
         color: black;
         padding: 0.5rem;
+        text-wrap: wrap;
       }
     }
   }
