fixes styles some more

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -21,7 +21,7 @@ body {
     > h1 {
       margin: 0;
       border-bottom: solid 2px rgba(250,250,250, 0.15);
-      font-size: 1.25rem;
+      font-size: 1.15rem;
       text-transform: uppercase;
       letter-spacing: 1px;
       padding: 0 0 1rem;
@@ -30,6 +30,7 @@ body {
       span {
         color: #DAA520;
         margin-left: 0.65rem;
+        margin-right: auto;
       }
 
       button {
